// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioInput should be rendered correctly 1`] = `
<label
  className="container root size-18 uui-color-primary -clickable"
>
  <div
    className="uui-radioinput"
  >
    <input
      aria-checked={false}
      checked={false}
      onChange={[Function]}
      type="radio"
    />
  </div>
</label>
`;

exports[`RadioInput should be rendered correctly 2`] = `
<label
  className="container root size-18 uui-color-primary -clickable"
>
  <div
    className="uui-radioinput"
  >
    <input
      aria-checked={false}
      checked={false}
      onChange={[Function]}
      type="radio"
    />
  </div>
  <div
    className="uui-input-label"
  >
    Open
  </div>
</label>
`;
